build-logs-failed/build-type-of-html-static-0.1.0.2.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - type-of-html-static-0.1.0.2 (lib) (first run)
 - type-of-html-static-0.1.0.2 (test:test) (first run)
Configuring library for type-of-html-static-0.1.0.2...
Preprocessing library for type-of-html-static-0.1.0.2...
Building library for type-of-html-static-0.1.0.2...
[1 of 1] Compiling Html.Static
Configuring test suite 'test' for type-of-html-static-0.1.0.2...
Preprocessing test suite 'test' for type-of-html-static-0.1.0.2...
Building test suite 'test' for type-of-html-static-0.1.0.2...
[1 of 1] Compiling Main

test/Main.hs:18:26: error: [GHC-76037]
    Not in scope: type constructor or class ‘>’
   |
18 |       ( div_ "a" :: 'Div > String
   |                          ^

test/Main.hs:19:19: error: [GHC-88464]
    Variable not in scope: div_ :: String -> a0
    Suggested fix: Perhaps use ‘div’ (imported from Prelude)
   |
19 |       , $(static (div_ "a")) :: Proxy "<div>a</div>"
   |                   ^^^^

test/Main.hs:25:14: error: [GHC-76037]
    Not in scope: type constructor or class ‘?>’
    Suggested fix:
      Perhaps use one of these:
        ‘:>’ (imported from Html),
        data constructor ‘:>’ (imported from Html)
   |
25 |   :: ('Title ?> a)
   |              ^^

test/Main.hs:27:12: error: [GHC-76037]
    Not in scope: type constructor or class ‘>’
   |
27 |   -> 'Html > (('Head > ('Title > a)) # ('Body > ('P > Proxy "Hello World!")))
   |            ^

test/Main.hs:27:22: error: [GHC-76037]
    Not in scope: type constructor or class ‘>’
   |
27 |   -> 'Html > (('Head > ('Title > a)) # ('Body > ('P > Proxy "Hello World!")))
   |                      ^

test/Main.hs:27:32: error: [GHC-76037]
    Not in scope: type constructor or class ‘>’
   |
27 |   -> 'Html > (('Head > ('Title > a)) # ('Body > ('P > Proxy "Hello World!")))
   |                                ^

test/Main.hs:27:47: error: [GHC-76037]
    Not in scope: type constructor or class ‘>’
   |
27 |   -> 'Html > (('Head > ('Title > a)) # ('Body > ('P > Proxy "Hello World!")))
   |                                               ^

test/Main.hs:27:53: error: [GHC-76037]
    Not in scope: type constructor or class ‘>’
   |
27 |   -> 'Html > (('Head > ('Title > a)) # ('Body > ('P > Proxy "Hello World!")))
   |                                                     ^
Error: [Cabal-7125]
Failed to build test:test from type-of-html-static-0.1.0.2.

